# STM32F3Discovery-meson-example

./: .gdbinit  .gitignore  .gitmodules  LICENSE  README.md  Toolchain.md  cross_file.build  cross_file_llvm.build  cross_gcc.build  main.c  main.h  meson.build  meson.txt  meson_get_cfiles.py  startup.c  startup_stm32f303xc.s
ldscripts/: STM32F303VC6.ld  mem.ld  mem_STM32F303VC6.ld  simple.ld  simple_tmp.ld
